<resources>
    <string name="app_name">安卓版扫雷0.1</string>
    <string name="game_title">扫雷</string>

    <string name="AMAP_api_key">f668799d25e3f1cfcfa7d4c79351e7de</string>


    <string name="easy_mode_button_label">简单</string>
    <string name="medium_mode_button_label">中等</string>
    <string name="hard_mode_button_label">困难</string>
    <string name="custom_mode_button_label">自选</string>
    <string name="record_button_label">成就</string>

    <string name="default_game_title">自定义难度</string>

    <string name="time_prompt">已用时间</string>
    <string name="mine_prompt">剩余雷数</string>
    <string name="timer_start">0</string>
    <string name="exit_button_label">退出</string>
    <string name="restart_button_label">重开</string>
    <string name="the_game_icon">游戏图标</string>

    <string name="button_return_label">返回</string>

    <string name="records_mine">雷数</string>
    <string name="records_time">时间</string>
    <string name="records_fields_size">地图大小</string>
    <string name="difficulty">难度</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">请定义你的难度</string>
    <string name="custom_width_prompt">自定义宽度</string>
    <string name="custom_height_prompt">自定义高度</string>
    <string name="custom_mine_prompt">自定义雷数</string>
    <string name="custom_start_button_label">开始</string>
    <string name="custom_out">返回</string>
    <string name="record_summary">成就概要</string>
    <string name="elapsed_time">用时</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="save_progress">保存进度</string>

</resources>